# cmd/api/routes.go
@@ -41,6 +41,9 @@ func (app *application) routes() http.Handler {
 		})
 
 		r.Route("/users", func(r chi.Router) {
+
+			r.Put("/activate/{token}", app.activateUserHandler)
+
 			r.Route("/{userID}", func(r chi.Router) {
 				r.Use(app.userContextMiddleware)
 				r.Get("/", app.getUserHandler)
@@ -57,6 +60,10 @@ func (app *application) routes() http.Handler {
 				r.Put("/", app.addProductToWishlistHandler)
 				r.Delete("/", app.removeProductFromWishlistHandler)
 			})
+		})
+
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user", app.registerUserHandler)
 		})
 	})
 
